--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,11 +40,8 @@ jobs:
             url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
         needs: build
+        timeout-minutes: 10
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
-              with:
-                  timeout: 600000 # 10 minutes in milliseconds
-                  error_count: 10
-                  reporting_interval: 5000
